# shafo

./: .dockerignore  .gitignore  README.md  backend-deployment.yaml  docker-compose.yml  example.env  init.sql
.github/workflows/: docker-publish.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/AI/: custom_views.py  tasks.py  throttling.py  urls.py  views.py
backend/AI/deep/: scanner.py
backend/api/: forms.py  middleware.py  throttling.py  urls.py  utils.py  views.py
backend/chat/: models.py  serializers.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py
backend/eauth/: backs.py  models.py  serializers.py  throttling.py  urls.py  views.py
backend/eauth/migrations/: 0001_initial.py  0002_alter_emailconfirmtoken_created_at.py  0003_alter_userwithemail_email.py
backend/templates/emails/: confirm_email.html
backend/utils/: email.py  images.py
backend/webapp/: settings.py  urls.py
cservice/: .air.toml  Dockerfile  example.env  go.mod  go.sum
cservice/constants/: constants.go
cservice/db/: db.go
cservice/internal/: Constants.go
cservice/migrations/: tables.sql
cservice/queries/: queries.go  tables.sql
cservice/types/: DataThrottles.go  Links.go  Params.go  data_throttles.go  http_status.go  links.go  params.go
cservice/validation/: url.go
frontend/: Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.js
k8s/cservice/: cservice-deployment.yaml  cservice-service.yaml
k8s/frontend/: frontend-deployment.yaml
k8s/postgres/: postgres-deployment.yaml
(+47 files in other folders)
